--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -193,7 +193,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 /* Slider */
 .slide_item{
     position: relative;
-    padding-left: 40px;
+    padding-left: 50px;
 }
 .slide_title{
     padding-bottom: 40px;
@@ -212,7 +212,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .dots .dot.om:after{background: rgba(255, 255, 255, 1); margin: 3px 0;}
 .slick-dots {
     position: absolute;
-    top:0;
+    top:2px;
     left: 20px;
 }
 .slick-dots {
@@ -245,10 +245,10 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .main_visual .item_img_main{display: inline-block; position: relative; z-index: 1;}
 .main_visual .item_img_sub .img_item{position: absolute; width: auto; transform: translate(-50%,-10%);}
 
-.slide_01 .item_img_main{position: relative; top:30px; right: -10px; transform: scale(1.2);}
+.slide_01 .item_img_main{position: relative; top:-10px; right: -10px; transform: scale(1);}
 .slide_01 .item_img_sub .img_item_02{top:-40px; right: 0; height: 40px;}
 .slide_01 .item_img_sub .img_item_01{top:80px; left: 10px; height: 100px;}
-.slide_02 .item_img_main{position: relative; top:-30px; right: 0; transform: scale(0.9);}
+.slide_02 .item_img_main{position: relative; top:-50px; right: 0; transform: scale(0.75);}
 .slide_02 .item_img_main .img_item_01{position: absolute; top:220px; right: 38px; height: 50px; z-index: -1;}
 .slide_02 .item_img_sub .img_item_06{top:112px; right: 20px; height: 72px; z-index: 10;}
 .slide_02 .item_img_sub .img_item_01{top:100px; left: -15px; height: 20px;}
@@ -257,7 +257,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_02 .item_img_sub .img_item_04{top:10px; right: 20px; height: 30px;}
 .slide_02 .item_img_sub .img_item_05{top:160px; left: 10px; height: 15px;}
 
-.slide_03 .item_img_main{position: relative; top:-50px; right: 0; transform: scale(0.85);}
+.slide_03 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.75);}
 .slide_03 .item_img_sub .img_item_01{top:116px; right: -50px; height: 160px;}
 .slide_03 .item_img_sub .img_item_02{top:0; left: 0; height: 45px;}
 .slide_03 .item_img_sub .img_item_03{top:48px; right: -20px; height: 40px;}
@@ -301,7 +301,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 .animated {
   -webkit-animation-duration: 3s;
-  animation-duration: 3s;
+  animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
