--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -114,12 +114,12 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 }
 
 .section{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 0 20px;
 }
 
 .btn_area_fixed{
@@ -162,13 +162,14 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .section_02{padding: 0 10px;}
 .section_02 .content{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 40%;
 }
-.section_02 .text_effect{}
+.section_02 .text_effect{position: absolute; width: 100%; top: 40%; left: 0; transform: translateY(-40%); text-align: center;}
 .section_02 .text_effect p{font-size: 3.6rem; font-weight: 700; color: #fff;}
 .section_02.item_02-02 .text_effect p, .section_02.item_02-04 .text_effect p{font-weight: 900;}
 .section_02.item_02-01{}
@@ -186,6 +187,11 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .section_03 .guide_box .text_guide{color: #fff; font-size: 1.2rem; text-align: center;}
 
 /* Slider */
+.slider{
+  position: relative;
+  height: 100%;
+  max-height: 400px;
+}
 .slide_item{
     position: relative;
     padding-left: 50px;
@@ -235,7 +241,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     background-color: rgba(255, 255, 255, 1);
   }
 
-.main_visual{position: relative;}
+.main_visual{position: relative; height: 100%; max-height: 400px;}
 .main_visual .item_img_sub{position: relative; z-index: 5;}
 .main_visual .item_img_main{display: inline-block; position: relative; z-index: 1;}
 .main_visual .item_img_sub .img_item{position: absolute; width: auto; transform: translate(-50%,-10%);}
@@ -243,7 +249,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_01 .item_img_main{position: relative; top:-10px; right: -10px; transform: scale(1);}
 .slide_01 .item_img_sub .img_item_02{top:-40px; right: 0; height: 40px;}
 .slide_01 .item_img_sub .img_item_01{top:80px; left: 10px; height: 80px;}
-.slide_02 .item_img_main{position: relative; top:-50px; right: 0; transform: scale(0.75);}
+.slide_02 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.70);}
 .slide_02 .item_img_main .img_item_01{position: absolute; top:220px; right: 38px; height: 50px; z-index: -1;}
 .slide_02 .item_img_sub .img_item_06{top:112px; right: 20px; height: 72px; z-index: 10;}
 .slide_02 .item_img_sub .img_item_01{top:100px; left: -15px; height: 20px;}
@@ -252,7 +258,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_02 .item_img_sub .img_item_04{top:10px; right: 20px; height: 30px;}
 .slide_02 .item_img_sub .img_item_05{top:160px; left: 10px; height: 15px;}
 
-.slide_03 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.75);}
+.slide_03 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.65);}
 .slide_03 .item_img_sub .img_item_01{top:116px; right: -80px; height: 160px;}
 .slide_03 .item_img_sub .img_item_02{top:0; left: 0; height: 45px;}
 .slide_03 .item_img_sub .img_item_03{top:48px; right: -20px; height: 40px;}
@@ -682,12 +688,6 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 }
 
 .section_02 .content{
-  position: fixed;
-  top: 0;
-  left: 0;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;  
   
   
 }
@@ -711,7 +711,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 
 @keyframes switch {
-  0% { opacity: 0;filter: blur(20px); transform:scale(12)}
+  0% { opacity: 0;filter: blur(20px); transform:scale(5)}
   3% { opacity: 1;filter: blur(0); transform:scale(1)}
   10% { opacity: 1;filter: blur(0); transform:scale(.9)}
   13% { opacity: 0;filter: blur(10px); transform:scale(.1)}
