--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -77,7 +77,6 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .wrap{
     position: relative;
     width: 100%;
-    height:calc(var(--vh, 1vh) * 100);
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
@@ -118,7 +117,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 0 20px;
 }
 
