--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -211,13 +211,14 @@ svg{max-width: 100%; width: 100%; user-select : none;}
   position: relative;
   height: 100%;
   max-height: 400px;
+  overflow: hidden;
 }
 .slide_item{
     position: relative;
     padding-left: 50px;
 }
 .slide_title{
-    padding-bottom: 40px;
+    padding-bottom: 30px;
 }
 .slide_title h3{
     color: #fff;
@@ -262,14 +263,14 @@ svg{max-width: 100%; width: 100%; user-select : none;}
   }
 
 .main_visual{position: relative; height: 100%; max-height: 400px;}
-.main_visual .item_img_sub{position: relative; z-index: 5;}
+.main_visual .item_img_sub{position: relative; top: -13px; z-index: 5;}
 .main_visual .item_img_main{display: inline-block; position: relative; z-index: 1;}
 .main_visual .item_img_sub .img_item{position: absolute; width: auto; transform: translate(-50%,-10%);}
 
-.slide_01 .item_img_main{position: relative; top:-10px; right: -10px; transform: scale(1);}
+.slide_01 .item_img_main{position: relative; top:-10px; right: -15px; transform: scale(0.9);}
 .slide_01 .item_img_sub .img_item_02{top:-40px; right: 0; height: 40px;}
 .slide_01 .item_img_sub .img_item_01{top:80px; left: 10px; height: 80px;}
-.slide_02 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.70);}
+.slide_02 .item_img_main{position: relative; right: 0; transform: scale(0.65); margin-top: -70px;}
 .slide_02 .item_img_main .img_item_01{position: absolute; top:220px; right: 38px; height: 50px; z-index: -1;}
 .slide_02 .item_img_sub .img_item_06{top:112px; right: 20px; height: 72px; z-index: 10;}
 .slide_02 .item_img_sub .img_item_01{top:100px; left: -15px; height: 20px;}
@@ -278,7 +279,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_02 .item_img_sub .img_item_04{top:10px; right: 20px; height: 30px;}
 .slide_02 .item_img_sub .img_item_05{top:160px; left: 25px; height: 15px;}
 
-.slide_03 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.65);}
+.slide_03 .item_img_main{position: relative; top:-90px; right: 0; transform: scale(0.65);}
 .slide_03 .item_img_sub .img_item_01{top:116px; right: -80px; height: 160px;}
 .slide_03 .item_img_sub .img_item_02{top:0; left: 0; height: 45px;}
 .slide_03 .item_img_sub .img_item_03{top:48px; right: -10px; height: 40px;}
