--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -165,7 +165,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     justify-content: center;
     align-items: center;
     position: relative;
-    top: -15%;
+    top: -20%;
     width: 100%;
     height: 15%;
     max-height: 100px;
@@ -198,7 +198,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .section_02 .text_effect:nth-child(5) { animation-delay: 6s;}
 
 .section_03{display: flex; align-items: center; position: relative; top: -40px}
-.section_03 .content{display: flex; flex-direction: column; justify-content: center; position: relative; top: -40px; margin-top padding: 20px 0;}
+.section_03 .content{display: flex; flex-direction: column; justify-content: center; position: relative; top: -40px; padding: 20px 0;}
 .section_03 .header_title{text-align: center; color: #fff; }
 .section_03 .header_title span.light{font-size: 3.6rem;}
 .section_03 .header_title span.bold{font-size: 3.8rem; letter-spacing: 2px;}
