--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -157,7 +157,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 /* Style Section */
 .section_01 .content{padding: 20px 0;}
 .section_01 .content_slide{height: 400px; margin: 0 -20px;}
-.section_01 .header_title{font-size: 3.6rem; font-weight: 600; color: #fff; padding-top: 20px;}
+.section_01 .header_title{font-size: 3.6rem; font-weight: 600; color: #fff;}
 .section_01 .title_des{font-size: 1.4rem; font-weight: 400; color: #fff; padding-top: 10px;}
 .section_01 .slide_nav{padding-left: 20px;}
 .section_02{padding: 0 10px;}
