--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -265,10 +265,10 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .main_visual .item_img_main{display: inline-block; position: relative; width: 100%; z-index: 1;}
 .main_visual .item_img_sub .img_item{position: absolute; width: auto; transform: translate(-50%,-10%);}
 
-.slide_01 .item_img_main{position: relative; top:-10px; right: -15px; transform: scale(0.9);}
+.slide_01 .item_img_main{position: relative; top:-20px; right: -15px; transform: scale(0.9);}
 .slide_01 .item_img_sub .img_item_02{top:-40px; right: 0; height: 40px;}
-.slide_01 .item_img_sub .img_item_01{top:80px; left: 10px; height: 80px;}
-.slide_02 .item_img_main{position: relative; right: 0; transform: scale(0.65); margin-top: -70px;}
+.slide_01 .item_img_sub .img_item_01{top:80px; left: 26px; height: 80px;}
+.slide_02 .item_img_main{position: relative; top:-80px; right: 0; transform: scale(0.65);}
 .slide_02 .item_img_main .img_item_01{position: absolute; width: auto; top:220px; right: 38px; height: 50px; z-index: -1;}
 .slide_02 .item_img_sub .img_item_06{top:112px; right: 20px; height: 72px; z-index: 10;}
 .slide_02 .item_img_sub .img_item_01{top:100px; left: -15px; height: 20px;}
@@ -277,8 +277,8 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_02 .item_img_sub .img_item_04{top:10px; right: 20px; height: 30px;}
 .slide_02 .item_img_sub .img_item_05{top:160px; left: 25px; height: 15px;}
 
-.slide_03 .item_img_main{position: relative; top:-100px; right: 0; transform: scale(0.63);}
-.slide_03 .item_img_sub .img_item_01{top:116px; right: -80px; height: 160px;}
+.slide_03 .item_img_main{position: relative; top:-100px; right: 0; transform: scale(0.6);}
+.slide_03 .item_img_sub .img_item_01{top:110px; right: -25px; height: 148px;}
 .slide_03 .item_img_sub .img_item_02{top:0; left: 0; height: 45px;}
 .slide_03 .item_img_sub .img_item_03{top:48px; right: -10px; height: 40px;}
 .slide_03 .item_img_sub .img_item_04{top:250px; left: 20px; height: 30px;}
@@ -318,14 +318,14 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 .slide_01 .main_visual .item_img_sub .img_item_01{
   opacity: 0;
   animation: 
-  fadein 0.8s 0.5s linear forwards,
-  bounce01 4s 0.8s ease infinite;
+  fadein 0.5s linear forwards,
+  bounce01 4s ease infinite;
 }
 .slide_01 .main_visual .item_img_sub .img_item_02{
   opacity: 0;
   animation: 
-  fadein 0.8s 0.5s linear forwards,
-  bounce02 4s 0.8s ease infinite;
+  fadein 0.5s linear forwards,
+  bounce02 4s ease infinite;
 }
 
 
@@ -462,11 +462,11 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 }
 
 @-webkit-keyframes slideR_03 {
-  100% { right: -50px; }
+  100% { right: -25px; }
 }
 
 @keyframes slideR {
-  100% { right: -50px; }
+  100% { right: -25px; }
 }
 
 .ex_bounce{ animation: bounce 2.5s  1s infinite ease;}
