--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -80,8 +80,8 @@ svg{max-width: 100%; width: 100%; user-select : none;}
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 100vh;
-    
+    height: auto;
+    min-height: 100vh;    
 }
 
 .bg_section{
