--- a/misc/searchAD/resource/css/style.css
+++ b/misc/searchAD/resource/css/style.css
@@ -38,7 +38,7 @@ audio, canvas, progress, video {display: inline-block; vertical-align: baseline;
 div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,button,pre,a{font-family: "Pretendard Variable", Pretendard, -apple-system, sans-serif; font-size:14px; font-size:1.4rem; line-height: 1.4; color:#333;}
 html, body{width: 100%; height: 100vh;}
 html{-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
-body{overflow: hidden; touch-action: none; -ms-overflow-style:none; -webkit-font-smoothing: antialiased;}
+body{overflow-y: scroll; touch-action: none; -ms-overflow-style:none; -webkit-font-smoothing: antialiased;}
 textarea{width:100%; resize: none;} 
 select, input, img, button{vertical-align:middle; border-radius: 0;}
 button{border: 0; background: transparent; cursor: pointer;}
@@ -78,7 +78,7 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 
 .wrap{
     position: relative;
-    overflow: hidden;
+    overflow-y: scroll;
     width: 100%;
     height: auto;
     min-height: 100vh;    
