--- a/clipdown/2024/webview/ad_search/resource/css/style.css
+++ b/clipdown/2024/webview/ad_search/resource/css/style.css
@@ -697,11 +697,14 @@ svg{max-width: 100%; width: 100%; user-select : none;}
 }
 
 
-
 @media only screen and (max-width: 767px) {
   .main_visual {
     position: relative;
     max-width: 360px;
     margin: 0 auto;
   }
+}
+
+@media only screen and (min-width: 480px) {
+  .section_01 .header_title{font-size: 4.2rem;}
 }
