--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -662,3 +662,13 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_invite .invite_list .list_item:last-child{border-bottom: 0;}
 .section_invite .invite_list .list_item span{font-size: 14px; font-size: 1.4rem; line-height: 1.4; vertical-align: middle;}
 .section_invite .invite_list .list_item .data{position: relative; top: 2px; font-weight: 700;}
+
+/* tooltip style bubble */
+.tooltip_layer{position: absolute; top:0; background: #fff; text-align: center; border: 1px solid #ddd; padding: 10px 10px; box-sizing: border-box; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); z-index: 9999;}
+.tooltip_layer::before, .tooltip_layer::after{content: ''; position: absolute; width: 0; height: 0; border-top: 5px solid transparent; border-left: 5px solid transparent; border-right: 5px solid transparent; right: 30px;}
+.tooltip_layer::before{border-bottom: 5px solid #ddd; top: -10px;}
+.tooltip_layer::after{border-bottom: 5px solid #fff; top: -9px;}
+.tooltip_layer .content_text {position: relative; top: 2px;}
+.tooltip_layer .content_text span{font-weight: 600;}
+
+.tooltip_layer.tooltip_point{top: 50px; right: 20px; min-width: 145px;}
