--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -165,7 +165,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 /* option filter style */
 .content_option{position: relative; overflow: hidden; width: 100%;  padding: 10px 0;}
-.content_option .filter_date{display: inline-block;}
+.content_option .filter_date{display: inline-block; padding-left: 20px;}
 .filter_date input[type=radio]{display: none; margin: 10px 10px;}
 .filter_date input[type=radio] + label{display: inline-block; position: relative; background: transparent; border: 1px solid #ddd; color: #666; font-size: 11px; font-size: 1.1rem; border-radius: 7px; padding: 4px 12px 5px; cursor: pointer;}
 .filter_date input[type=radio]:checked + label{background: #666; border: 1px solid #666; color: #fff; z-index: 1;}
@@ -664,7 +664,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_invite .invite_list .list_item .data{position: relative; top: 2px; font-weight: 700;}
 
 /* tooltip style bubble */
-.tooltip_layer{position: absolute; top:0; background: #fff; text-align: center; border: 1px solid #ddd; padding: 10px 10px; box-sizing: border-box; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); z-index: 9999;}
+.tooltip_layer{position: absolute; top:0; background: #fff; text-align: center; border: 1px solid #ddd; padding: 8px 10px; box-sizing: border-box; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); z-index: 9999;}
 .tooltip_layer::before, .tooltip_layer::after{content: ''; position: absolute; width: 0; height: 0; border-top: 5px solid transparent; border-left: 5px solid transparent; border-right: 5px solid transparent; right: 30px;}
 .tooltip_layer::before{border-bottom: 5px solid #ddd; top: -10px;}
 .tooltip_layer::after{border-bottom: 5px solid #fff; top: -9px;}
